--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "godotTools.editorPath.godot4": "/Applications/Godot.app"
+  "godotTools.editorPath.godot4": "f:\\Godot\\Godot_v4.4.1-stable_mono_win64.exe"
 }
